<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="mapbox_access_token" tools:ignore="Typos">pk.eyJ1Ijoianpvcm5vdyIsImEiOiJjazVsOWhkc2YwbWgwM2xuNXJvdnlhN2o3In0.tW5TbWlDY-ciFrYSv6qTOA</string>

    <string name="app_name">BikeStreets</string>

    <!-- Preference Titles -->
    <string name="map_settings_header">Map Settings</string>
    <string name="map_orientation_title">Map Orientation</string>
    <string name="map_orientation_preference_key">map_orientation_preference_key</string>
    <string name="application_settings_header">Application Settings</string>
    <string name="keep_screen_on_title">Keep Screen On</string>
    <string name="map_type_title">Map View</string>
    <string name="map_type_preference_key">map_view_type</string>

    <!-- Preference Values -->
    <string name="preference_street">street_map</string>
    <string name="preference_satellite">satellite_view</string>

    <!-- Search -->
    <string name="search_instructions">Find a Route with VAMOS</string>
    <string name="search_directions">Directions</string>
    <string name="search_bar_instruction">Search</string>
    <string name="search_content_desc">search icon</string>

    <string name="search_set_origin">Set Origin</string>
    <string name="search_set_destination">Set Destination</string>
    <string name="close_bottom_drawer_description">Close bottom sheet button</string>

    <string name="current_location">Current Location</string>

    <!-- Settings/About -->
    <string name="enable_location_permission">Enable Location Marker</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="info_button">information</string>
    <string name="update_camera_location_button">update camera location</string>

    <!-- Terns of Use -->
    <string name="terms_instructions">You must accept our Release and Waiver, Terms of Service, and Privacy Policy to use the app.</string>

    <string name="no_location_access">No location - some features are limited</string>
</resources>
