<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/map_settings_header">

        <ListPreference
            app:defaultValue="@string/preference_street"
            app:entries="@array/map_type_entries"
            app:entryValues="@array/map_type_values"
            app:key="@string/map_type_preference_key"
            app:title="@string/map_type_title"
            app:useSimpleSummaryProvider="true" />

<!--TODO: add back in once map has been fixed-->
<!--        <ListPreference-->
<!--            app:defaultValue="direction_of_travel"-->
<!--            app:entries="@array/map_orientation_entries"-->
<!--            app:entryValues="@array/map_orientation_values"-->
<!--            app:key="@string/map_orientation_preference_key"-->
<!--            app:title="@string/map_orientation_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/application_settings_header">

        <SwitchPreferenceCompat
            app:key="keep_screen_on"
            app:title="@string/keep_screen_on_title" />

    </PreferenceCategory>

    <PreferenceCategory />

</PreferenceScreen>
